I have added the Billing and shipping address form for the client

--- a/cart.html
+++ b/cart.html
@@ -43,7 +43,7 @@
 					<a href="index.html" class="btn">Continue Shopping</a>
 				</li>
 				<li>
-					<a href="" class="btn">Go To Checkout</a>
+					<a href="checkout.html" class="btn">Go To Checkout</a>
 				</li>
 			</ul>
 		</form>
