--- a/checkout.html
+++ b/checkout.html
@@ -61,15 +61,12 @@
 		 			<input type="text" name="address" id="address" data-type="string" data-message="This field cannot be empty" />
 		 		</div>
 		 		<div>
-		 			<label for="zip">ZIP Code</label>
-		 			<input type="text" name="zip" id="zip" data-type="string" data-message="This field cannot be empty" />
-		 		</div>
-		 		<div>
 		 			<label for="country">Country</label>
 		 			<select name="country" id="country" data-type="string" data-message="This field cannot be empty">
 		 				<option value="">Select</option>
-		 				<option value="De">Denmark</option>
-		 				<option value="IN">India</option>
+		 				<option value="De">Uganda</option>
+		 				<option value="IN">Kenya</option>
+						 <option value="IN">Tanzania</option>
 		 			</select>
 		 		</div>
 		 	</fieldset>
